--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -16,7 +16,29 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="start|center">
+
+                <ImageView
+                    android:id="@+id/siteIcon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"/>
+
+                <EditText
+                    android:id="@+id/UrlBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:selectAllOnFocus="true"
+                    android:maxLines="1"
+                    android:minWidth="50dp"
+                    android:textColor="#ffffff"
+                    android:inputType="textUri"/>
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -27,7 +49,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:layout_margin="@dimen/fab_margin" />
+
+    <LinearLayout
+        android:id="@+id/controls"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:background="#ffffff"
+        android:padding="5dp"
+        android:layout_marginBottom="70dp"
+        android:layout_marginEnd="15dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/btn_reload"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/reload"
+            android:layout_marginBottom="10dp"/>
+
+        <ImageView
+            android:id="@+id/btn_forward"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/arrow"
+            android:layout_marginBottom="10dp"/>
+
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/arrow"/>
+    </LinearLayout>
+
+
 
 </android.support.design.widget.CoordinatorLayout>
