--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,68 +23,24 @@
                 android:orientation="horizontal"
                 android:gravity="start|center">
 
-                <ImageView
-                    android:id="@+id/siteIcon"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"/>
 
                 <EditText
                     android:id="@+id/UrlBar"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
                     android:selectAllOnFocus="true"
                     android:maxLines="1"
-                    android:minWidth="50dp"
+                    android:hint="Search for something"
                     android:textColor="#ffffff"
-                    android:inputType="textUri"/>
+                    android:inputType="textUri"
+                    android:imeOptions="actionSend"
+                    android:imeActionLabel="GO"/>
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin" />
-
-    <LinearLayout
-        android:id="@+id/controls"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:background="#7b7b7b"
-        android:padding="5dp"
-        android:layout_marginBottom="70dp"
-        android:layout_marginEnd="15dp"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/btn_reload"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@mipmap/reload"
-            android:layout_marginBottom="10dp"/>
-
-        <ImageView
-            android:id="@+id/btn_forward"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@mipmap/arrow"
-            android:layout_marginBottom="10dp"/>
-
-        <ImageView
-            android:id="@+id/btn_back"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:rotation="180"
-            android:src="@mipmap/arrow"/>
-    </LinearLayout>
-
-
 
 </android.support.design.widget.CoordinatorLayout>
