--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -34,6 +34,7 @@
                     android:hint="Search for something"
                     android:textColor="#ffffff"
                     android:inputType="textUri"
+                    android:focusedByDefault="false"
                     android:imeOptions="actionSend"
                     android:imeActionLabel="GO"/>
             </LinearLayout>
