--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="#121e33"
+    android:background="@color/colorPrimary"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -27,11 +28,11 @@
             android:id="@+id/webviewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="35dp"
             android:maxLines="2"
             android:textStyle="bold"
             android:textSize="15sp"
             android:text="KODAH" />
-
     </LinearLayout>
 
 
@@ -43,28 +44,35 @@
 
         <ImageView
             android:id="@+id/btn_back"
-            android:layout_width="50dp"
+            android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="20dp"
             android:onClick="Controls"
             android:rotation="180"
             android:src="@mipmap/arrow"/>
 
         <ImageView
             android:id="@+id/btn_forward"
-            android:layout_width="50dp"
+            android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@mipmap/arrow"
             android:onClick="Controls"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="20dp"/>
 
         <ImageView
             android:id="@+id/btn_reload"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginEnd="50dp"
             android:onClick="Controls"
             android:src="@mipmap/reload"/>
 
+        <ImageView
+            android:src="@mipmap/star_outline"
+            android:onClick="addBookmark"
+            android:id="@+id/btn_bookmark"
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
     </LinearLayout>
 
 
