--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -20,7 +20,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Kodah is a web browser loaded with features for coders, especially web developers."
+                android:text="Kodah is the ultimate snippet tool for coders."
                 android:textColor="#fff"
                 android:textSize="20sp"/>
             <ImageView
