--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,20 +23,21 @@
                 android:orientation="horizontal"
                 android:gravity="start|center">
 
-
+                <ImageView
+                    android:src="@mipmap/kodah_icon"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"/>
                 <EditText
-                    android:id="@+id/UrlBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="5dp"
-                    android:selectAllOnFocus="true"
-                    android:maxLines="1"
-                    android:hint="Search for something"
-                    android:textColor="#ffffff"
-                    android:inputType="textUri"
-                    android:focusedByDefault="false"
-                    android:imeOptions="actionSend"
-                    android:imeActionLabel="GO"/>
+                    android:id="@+id/serverIP_txt"
+                    android:hint="PC IP Address"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content" />
+                <Button
+                    android:id="@+id/connectIP_btn"
+                    android:text="CONNECT"
+                    android:onClick="connectToServer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
 
